--- a/package.json
+++ b/package.json
@@ -36,11 +36,7 @@
 	"license": "MIT",
 	"type": "module",
 	"description": "A lightweight utility to flatten nested JavaScript objects into dot-notation key-value pairs and unflatten them back. Perfect for handling complex configurations, form data, or API transformations.",
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
+	"files": ["dist", "README.md", "LICENSE"],
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@vitest/coverage-v8": "^3.0.7",
@@ -60,11 +56,7 @@
 	},
 	"vitest": {
 		"coverage": {
-			"reporter": [
-				"text",
-				"json",
-				"html"
-			],
+			"reporter": ["text", "json", "html"],
 			"branches": 80,
 			"functions": 80,
 			"lines": 80,
