--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,10 @@ name: Publish to NPM and GitHub
 on:
   push:
     tags:
-      - 'v*' # Triggers on version tags
+      - 'v*'
+
+permissions:
+  contents: write
 
 jobs:
   publish:
@@ -10,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Important for getting changelog
+          fetch-depth: 0
       
       - uses: actions/setup-node@v3
         with:
@@ -27,29 +30,28 @@ jobs:
       - name: Build
         run: npm run build
         
-      - name: Get version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-        
       - name: Generate Release Notes
         id: release_notes
         run: |
-          echo "NOTES<<EOF" >> $GITHUB_OUTPUT
-          echo "$(git log --pretty=format:'%h - %s' $(git describe --tags --abbrev=0 HEAD^)..HEAD)" >> $GITHUB_OUTPUT
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          if [ -z "$PREVIOUS_TAG" ]; then
+            CHANGELOG=$(git log --pretty=format:'%h - %s' ${{ github.sha }})
+          else
+            CHANGELOG=$(git log --pretty=format:'%h - %s' $PREVIOUS_TAG..${{ github.sha }})
+          fi
+          echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
+          echo "$CHANGELOG" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.get_version.outputs.VERSION }}
-          body: ${{ steps.release_notes.outputs.NOTES }}
-          draft: false
-          prerelease: false
+        run: |
+          gh release create ${{ github.ref_name }} \
+            --title "Release ${{ github.ref_name }}" \
+            --notes "${{ steps.release_notes.outputs.CHANGELOG }}"
         
       - name: Publish to NPM
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
