--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "nested-object-to-key-value",
 	"version": "1.0.4",
-	"main": "dist/index.js",
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/esm/index.js",
 	"types": "dist/index.d.ts",
 	"author": "uǝsʇƃᴉɹqǝƃuI puᴉʌᴉƎ",
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && tsc --module commonjs --outDir dist/cjs",
 		"test": "vitest",
 		"test:ci": "vitest --run --coverage --reporter=verbose",
 		"prepare": "npm run build",
@@ -64,6 +65,12 @@
 			"functions": 80,
 			"lines": 80,
 			"statements": 80
+		}
+	},
+	"exports": {
+		".": {
+			"import": "./dist/esm/index.js",
+			"require": "./dist/cjs/index.js"
 		}
 	}
 }
