remove dist before build

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 	"types": "dist/index.d.ts",
 	"author": "uǝsʇƃᴉɹqǝƃuI puᴉʌᴉƎ",
 	"scripts": {
-		"build": "tsc && tsc --module commonjs --outDir dist/cjs",
+		"build": "rm -rf dist && tsc && tsc --module commonjs --outDir dist/cjs",
 		"test": "vitest",
 		"test:ci": "vitest --run --coverage --reporter=verbose",
 		"prepare": "npm run build",
 		"lint": "biome check .",
 		"format": "biome format . --write",
-		"prepublishOnly": "npm test && rm -rf dist && npm run build",
+		"prepublishOnly": "npm test && npm run build",
 		"preversion": "npm run lint",
 		"version": "npm run format && git add -A src",
 		"postversion": "git push && git push --tags",
