--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
 	"name": "nested-object-to-key-value",
 	"version": "1.0.7",
-	"main": "./dist/cjs/index.js",
-	"module": "./dist/esm/index.js",
-	"types": "dist/index.d.ts",
 	"author": "uǝsʇƃᴉɹqǝƃuI puᴉʌᴉƎ",
 	"scripts": {
-		"build": "rm -rf dist && tsc && tsc --module commonjs --outDir dist/cjs",
+		"build": "rm -rf dist && tsc",
 		"test": "vitest",
 		"test:ci": "vitest --run --coverage --reporter=verbose",
 		"prepare": "npm run build",
@@ -39,8 +36,9 @@
 	],
 	"license": "MIT",
 	"type": "module",
+	"exports": "./dist/index.js",
 	"description": "A lightweight utility to flatten nested JavaScript objects into dot-notation key-value pairs and unflatten them back. Perfect for handling complex configurations, form data, or API transformations.",
-	"files": ["dist", "README.md", "LICENSE"],
+	"files": ["dist", "README.md"],
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@vitest/coverage-v8": "^3.0.7",
@@ -65,12 +63,6 @@
 			"functions": 80,
 			"lines": 80,
 			"statements": 80
-		}
-	},
-	"exports": {
-		".": {
-			"import": "./dist/esm/index.js",
-			"require": "./dist/cjs/index.js"
 		}
 	}
 }
